--- a/Week3-M2/Ejercicio2/blog.css
+++ b/Week3-M2/Ejercicio2/blog.css
@@ -6,35 +6,39 @@ body {
     margin: 0 auto;
 }
 
-.written {
-    text-align: center;
-    margin: 20px;
+:root {
+    --font-main: "inter",Helvetica, arial, sans-serif;
+    --color-main:#403f3e;
 }
 
-.mainheader {
+.text_container {
+    text-align: center;
+    margin: 1.25rem;
+}
+
+.top_first_header {
     font-family:"Helvetica", arial, sans-serif;
-    font-size: 62px;
-    line-height: 65px;
+    font-size: 3.875rem;
+    line-height: 4.063rem;
     font-weight: 800;
-    letter-spacing: 0px;
     color: #2d2e2e;
 }
 
-.subtitle {
-    font-family: "inter",Helvetica, arial, sans-serif;
-    font-size: 24px;
-    line-height: 10px;
+.second_title {
+    font-family: var(--font-main);
+    font-size: 1.5rem;
+    line-height: 0.625rem;
     font-weight: 400;
-    color: #403f3e;
+    color: var(--color-main);
 }
 
-.date {
-    font-family: "inter",Helvetica, arial, sans-serif;
-    font-size: 15px;
+.name_author_and_date {
+    font-family: var(--font-main);
+    font-size: 0.938rem;
     padding-top: 1rem;
-    line-height: 6px;
+    line-height: 0.375rem;
     font-weight: 300;
-    color: #403f3e;
+    color: var(--color-main);
 }
 
 .photo {
@@ -44,27 +48,27 @@ body {
     
 }
 
-.photo_description {
-    font-family: "inter",Helvetica, arial, sans-serif;
-    font-size: 15px;
+.photo_description_on_grey {
+    font-family: var(--font-main);
+    font-size: 0.938rem;
     padding-top: 1rem;
-    line-height: 6px;
+    line-height: 0.375rem;
     font-weight: 300;
-    color: #403f3e;
+    color: var(--color-main);
     background-color: #d6d6d6;
-    margin: 2px;
+    margin: 0.125rem;
     padding: 20px 3px;
-    max-width: 700px;
+    max-width: 43.75rem;
     
 
 }
 
-.paragraph {
-    font-family: var("inter",Helvetica, arial, sans-serif);
-    max-width: 700px;
+.paragraph_of_article {
+    font-family: var(--font-main);
+    max-width: 43.75rem;
     margin: 0 auto 1.5rem;
     font-size: 1.3rem;
-    color: #403f3e;
+    color: var(--color-main);
     padding-top: 2rem;
     text-align: left;  
 }
