--- a/Week4-M2/verduleria.css
+++ b/Week4-M2/verduleria.css
@@ -3,10 +3,16 @@ body {
     flex-direction: column;
 }
 
+:root {
+    --font-main:"Arial", sans-serif;
+    --font-secundary:"Roboto", sans-serif;
+    --background-main-color:rgb(240, 239, 239);
+}
+
 .header_container {
     display: flex;
     flex-direction: row;
-    background-color: rgb(240, 239, 239);
+    background-color: var(--background-main-color);
 }
 
 .logo_button {
@@ -14,11 +20,11 @@ body {
     margin-left: -4rem;
     width: 15rem;
     height: 3rem;
-    background-color: rgb(240, 239, 239);
+    background-color:var(--background-main-color);
 }
 
 .name {
-    font-family:  "Arial", sans-serif;
+    font-family:  var(--font-main);
     font-size: 1.4rem;
     font-weight: 700;
     transform: scaleY(1.5);
@@ -42,11 +48,11 @@ body {
 }
 
 .menu_bar {
-    font-family:  "Arial", sans-serif;
+    font-family: var(--font-main);
     font-size: 1rem;
     font-weight: 500;
     color: grey;
-    background-color: rgb(240, 239, 239);
+    background-color: var(--background-main-color);
     border: none;
     margin-top: 1rem;
     margin-left: 3rem ;
@@ -63,7 +69,7 @@ poster {
 }
 
 .header_fruit {
-    font-family:  "Arial", sans-serif;
+    font-family:  var(--font-main);
     font-size: 3rem;
     font-weight: 520;
     margin-left: 2rem;
@@ -71,7 +77,7 @@ poster {
 }
 
 .description_product {
-    font-family:  "Arial", sans-serif;
+    font-family:  var(--font-main);
     font-size: 1rem;
     font-weight: 500;
     margin-left: 2rem;
@@ -79,7 +85,7 @@ poster {
 }
 
 .product_price {
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-secundary);
     color: #379237;
     font-size: 2rem;
     font-weight: 700;
@@ -106,7 +112,7 @@ poster {
 }
 
 .fruits{
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-secundary);
     font-size: 2rem;
     font-weight: 700;
     margin-left: 0rem;
@@ -134,7 +140,7 @@ catalog {
 }
 
 .name_fruit {
-    font-family:  "Arial", sans-serif;
+    font-family:  var(--font-main);
     font-size: 1.5rem;
     font-weight: 700;
     text-align: center;
@@ -142,7 +148,7 @@ catalog {
 }
 
 .description_fruit {
-    font-family:  "Arial", sans-serif;
+    font-family:  var(--font-main);
     text-align: center;
     font-size: 0.9rem;
     font-weight: 500;
@@ -151,7 +157,7 @@ catalog {
 }
 
 .price_card {
-    font-family:  "Arial", sans-serif;
+    font-family:  var(--font-main);
     text-align: center;
     font-size: 1rem;
     font-weight: 700;
@@ -180,12 +186,12 @@ catalog {
 }
 
 .main_h1 {
-    font-family: "Roboto", sans-serif;
+    font-family: var(--font-secundary);
     font-weight: 700;
 }
 
 .sec_h2 {
-    font-family:  "Arial", sans-serif;
+    font-family:  var(--font-main);
     font-weight: 500;
     font-size: 1rem;
     margin-top: -1rem;
