--- a/Week7-M2/Ejercicio3.css
+++ b/Week7-M2/Ejercicio3.css
@@ -15,7 +15,7 @@
 .greenBackground {
     background-color: green;
 }
-.greenBackground {
+.yellowBackground {
     background-color: yellow;
 }
 .cyanBackground {
